--- a/templates/option.html
+++ b/templates/option.html
@@ -464,7 +464,20 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>หาดนางเหงา</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>
+                หาดนางเหงา เป็นหาดทรายที่ตั้งอยู่ริมฝั่งแม่น้ำมูล ของ
+                อำเภอกันทรารมย์ จังหวัดศรีสะเกษ
+                ความพิเศษของที่นี่ก็คือในช่วงเวลาที่น้ำจะลดนั้น
+                เราจะสามารถมองเห็นหาดทรายได้อย่างสวยงาม
+                เหมาะกับการมาพักผ่อนหย่อนใจเล่นน้ำชิลๆ
+                แต่ในช่วงที่ควรมามากที่สุดก็คือ ฤดูแล้ง
+                ระหว่างเดือนมีนาคมถึงเมษายน ถึงจะเห็นหาดทรายสวยๆ นั่นเองค่ะ
+              </p>
+            <p>ที่อยู่ : ตำบลดูน อำเภอกันทรารมย์ จังหวัดศรีสะเกษ
+            </p>
+              พิกัด : https://goo.gl/maps/2pef6iych1sLUtPW8 
+            </p>  
+              เปิดให้เข้าชม : สามารถเข้าชมได้ตลอดทั้งวัน</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -476,7 +489,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดบ้านจาน</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 2</p>
+              <p>วัดบ้านจาน ตั้งอยู่ตำบลจานอำเภอกันทรารมย์จังหวัดศรีสะเกษ
+              เป็นวัดที่มีชื่อเสียงโด่งดังเป็นที่รู้จักของประชาชนโดยทั่วไป
+              วัดแห่งนี้เคยเป็นสถานที่จำพรรษาของหลวงปู่หมุนฐิตสีโล
+              ไม่ว่าในวันนี้หลวงปู่หมุนจะละสังขารไปนานแล้ว
+              แต่ด้วยปฏิปทาอันเป็นที่น่าเคารพเลื่อมใสทำให้ประชาชนยังคงแวะเวียนไปกราบไหว้</p>
+              <p>
+               ที่อยู่ ตำบลจาน อำเภอกันทรารมย์ จังหวัดศรีสะเกษ 
+            </p>
+               พิกัด : https://maps.app.goo.gl/TF3TcuyjQg74m8J16
+          </p> เปิดให้เข้าชม : ทุกวันเวลา 8:30-17:30 น.</p>
             </div>
           </div>
 
@@ -491,7 +513,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดไพรพัฒนา</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>วัดไพรพัฒนา เป็นที่พำนักของหลวงปู่สรวงพระเกจิแห่งอีสานใต้
+                ช่วยเหลือผู้ตกทุกข์ได้ยากจนเป็นที่รักและศรัทธาของผู้คนทั่วไป
+                ภายหลังจากที่หลวงปู่ละสังขารเมื่อปี 2542 สรีระสังขารของหลวงปู่ไม่เน่าเปื่อย
+                ลูกศิษย์ได้นำไปบรรจุไว้ในโลงแก้วเพื่อให้ประชาชนและนักท่องเที่ยวได้มากราบไหว้ขอพร
+                เพื่อความเป็นสิริมงคลค่ะ ภายในวัดมีสถานที่สำคัญคือ มณฑปปราสาทหลวงปู่สรวง ที่สวยงาม 
+              </p>
+              <p>ที่อยู่ : ตำบลไพรพัฒนา อำเภอภูสิงห์ จังหวัดศรีสะเกษ
+              </p>พิกัด : https://goo.gl/maps/XnoSEeQStbVLGvU69
+            </p>เปิดให้เข้าชม : 06.00-20.00 น. 
+          </p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -503,7 +534,17 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>จุดชมวิวพญากูปรี</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 2</p>
+              <p>จุดชมวิวพญากูปรี เป็นพิกัดสวยจุดชมวิวที่มีรูปปั้นกูปรีขนาดใหญ่
+              ซึ่งเป็นสัตว์ป่าสงวนที่เคยมีผู้พบเห็นในป่าบริเวณนี้นั่นเองค่ะ
+              พร้อมกับมีสวนหินโบราณอายุนับร้อยล้านปี ที่จัดเอาไว้อย่างสวยงามอีกด้วย
+              โดยวิวทิวทัศน์ที่เราจะได้เห็นกันนั้นคือบริเวณกว้างของธรรมชาติสวยๆ
+              ที่มองได้จากริมหน้าผาสูง เห็นทั้งทิวเขาพนมดงรัก ต้นน้ำห้วยสำราญที่กั้นระหว่าง
+              อำเภอภูสิงห์ ศรีสะเกษ และ อำเภอบัวเชด สุรินทร์ ได้แบบสุดลูกหูลูกสายตาเลยทีเดียวค่ะ
+            </p>
+            <p>ที่อยู่ : ตำบลไพรพัฒนา อำเภอภูสิงห์ จังหวัดศรีสะเกษ
+            </p>พิกัด : https://goo.gl/maps/KAcd6SJYebepjEjF7   
+          </p>เปิดให้เข้าชม : 08.00-17.00 น.
+        </p>
             </div>
           </div>
 
@@ -518,7 +559,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดป่ามหาเจดีย์แก้ว หรือ วัดล้านขวด</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>วัดป่ามหาเจดีย์แก้ว หรือ วัดล้านขวด ด้วยความสวยงามของวัดที่ถูกประดับประดาด้วย
+              ขวดแก้วหลากสีหลายแบบรวมกันกว่า 1.5 ล้านใบ ทั้งซุ้มประตูทางเข้า โบสถ์ ศาลา หอระฆัง กุฏิ และอื่นๆ
+              ในบริเวณค่ะ เป็นอีกวัดที่ Unseen สุดๆ เลยก็ว่าได้
+              สถานที่สำคัญภายในวัดก็คือ ศาลาฐานสโมสรเจดีย์แก้ว และ สิมน้ำ ซึ่งงดงามอลังการด้วยขวดจำนวนนับแสนใบ
+              สลับสีขวดเป็นลวดลายต่างๆ นับว่าเป็นศิลปะที่ไม่มีที่ไหนเหมือน และทำให้วัดล้านขวดเป็นที่เที่ยวอีกแห่งที่พลาดไม่ได้เลยทีเดียวค่ะ
+            </p>
+            <p>ที่อยู่ : บ้านดอน ตำบลโนนสูง อำเภอขุนหาญ จังหวัดศรีสะเกษ
+            </p>พิกัด : https://goo.gl/maps/serGTVsT3DNStC528
+          </p>เปิดให้เข้าชม : 06.00-18.00 น.
+        </p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -530,7 +580,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>น้ำตกสำโรงเกียรติ</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 2</p>
+              <p>น้ำตกสำโรงเกียรติ น้ำตกสายสวยๆ ที่มีต้นน้ำมาจากบริเวณภูเขากันทุงในเทือกเขาบรรทัด
+              เป็นน้ำตกขนาดกลางที่ไหลลงมาจากหน้าผาสูงกว่า 8 เมตร
+              ซึ่งจะมีน้ำมากที่สุดในช่วงเดือนกันยายนไปจนถึงกุมภาพันธ์ค่ะ
+              รวมถึงบริเวณเหนือน้ำตกก็ยังเป็นธารน้ำไหล ที่ไหลไปตามลานหิน 
+              ทำให้มองดูแล้วมีความสวยงามอย่างมากเลยทีเดียวค่ะ
+            </p>
+            <p>ที่อยู่ : ตำบลบักดอง อำเภอขุนหาญ จังหวัดศรีสะเกษ
+            </p>พิกัด : https://goo.gl/maps/GZKqcTGEkELcnn6V6
+          </p>เปิดให้เข้าชม : 08.30-16.30 น.
+        </p>
             </div>
           </div>
 
@@ -545,10 +604,21 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดศรีบึงบูรพ์</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>วัดศรีบึงบูรพ์ ตั้งอยู่ริมลำน้ำห้วยทับทัน จึงทำให้ภายในวัดมี
+              บรรยากาศสวยงาม ร่มรื่นตามธรรมชาติ อีกทั้งที่นี่ยังเป็นสถานที่บำเพ็ญ
+              เพียรภาวนาของพระอาจารย์ศรีจันทร์สาโร พระเกจที่ชาวบ้านให้ความ
+              เคารพเลื่อมใส นอกจากนี้ ภายในวัดศรีบึงบูรพ์ ยังเป็นที่ประดิษฐานของ
+              พระพุทธชินราชจำลององค์ที่ 2 ของประเทศไทยอีกด้วย จึงมีผู้มาสักกา
+              ระบูชามากมาย รวมถึงยังมี ศาลเจ้าพ่ออุปราช ซึ่งเป็นเทวดาตามความ
+              เชื่อของชาวบึงบูรพ์ค่ะ
+            </p>
+            <p>ที่อยู่ : บ้านโนนสาวสวย หมู่ที่ 4 ตำบลบึงบูรพ์ อำเภอบึงบูรพ์ จังหวัดศรีสะเกษ
+            </p>พิกัด : https://goo.gl/maps/WzrZZVizKMpXPLfK8
+          </p>เปิดให้เข้าชม : 06.00-18.00 น.
+        </p>
             </div>
           </div>
-
+          
           <div class="district อำเภอ9" style="display: none">
             <div
               class="col-md-4 portfolio-item"
@@ -560,7 +630,19 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ปราสาทปรางค์กู่</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>ปราสาทปรางค์กู่ เป็นศาสนสถานสมัยขอมที่เก่าแก่ มีอายุกว่าพันปี สร้าง
+              ด้วยอิฐเรียงแผ่นใหญ่เหมือน ปราสาทศรีขรภูมิ ในจังหวัดสุรินทร์ค่ะ ภายในเป็น
+              ปราสาท 3 หลังซึ่งตั้งอยู่บนฐานที่สร้างด้วยหินศิลาแลงทั้งหมด สันนิษฐานว่า
+              ปราสาทปรางค์กู่สร้างขึ้นราวพุทธศตวรรษที่16 ในสมัยพระเจ้าชัยวรมันที่ 7 เพื่อ
+              ใช้เป็นสถาน อโรคยาศาลา หรือ โรงพยาบาลในสมัยนั้นๆ ค่ะ
+              นอกจากนี้ ปราสาทปรางค์กู่ ยังเป็นสถานที่ศักดิ์สิทธิ์ที่ชุมชนชาวกูยให้ความ
+              เคารพบูชา ซึ่งชาวกูยบ้านกู่ได้สมมติชื่อวิญญาณที่สิงสถิต ณ ปราสาทกู่ว่า 
+              ปู่พัทธเสน และใช้เรียกขานชื่อนี้ในการเซ่นไหว้ตลอดมาอีกด้วย
+            </p>
+            <p>ที่อยู่ : ตำบลกู่ อำเภอปรางค์กู่ จังหวัดศรีสะเกษ
+            </p>พิกัด : https://goo.gl/maps/dWCrnpTuG4YnU7MX8
+          </p>เปิดให้เข้าชม : 08.00-18.00 น.
+        </p>
             </div>
           </div>
         </div>
