--- a/templates/nav.html
+++ b/templates/nav.html
@@ -36,7 +36,8 @@
         overflow: hidden;
         transition: max-height 0.5s ease, opacity 0.5s ease;
         opacity: 0;
-        background-color: #f5f5f5;
+        background-color: rgba(245, 245, 245, 0); /* สีใส */
+        background-color: transparent; /* สีใส */
         position: absolute;
         top: 100%;
         left: 0;
@@ -58,14 +59,14 @@
         display: block;
       }
       .navbar ul li a:hover {
-        color: #555555;
+        color: #000000;
       }
       .navbar-icon {
         display: none; /* ซ่อนโลโก้บนมือถือ */
       }
       .toggle-icon {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         cursor: pointer;
         display: none;
       }
@@ -95,7 +96,7 @@
           margin-top: 0;
         }
         .navbar ul li a {
-          font-size: 18px;
+          font-size: 25px;
           font-weight: bold;
         }
         .navbar-icon {
@@ -111,15 +112,15 @@
           position: static;
         }
         .navbar ul li {
-          margin: 0 15px;
+          margin: 0 12px;
         }
         .toggle-icon {
           display: none; /* ซ่อนปุ่ม toggle บน PC */
         }
         .navbar-icon {
           display: block; /* แสดงโลโก้บน PC */
-          width: 20px;
-          height: 20px;
+          width: 50px;
+          height: 50px;
         }
       }
     </style>
@@ -128,15 +129,9 @@
     <nav class="navbar" id="navbar">
       <a href="#" id="logo-btn">
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg"
-          alt="tarvel"
+          src="https://www.shutterstock.com/image-vector/sisaket-map-black-lettering-design-600nw-2330119171.jpg"
+          alt="tarvel in Sisaket"
           class="navbar-icon"
-        />
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg"
-          alt="Toggle Menu"
-          class="toggle-icon"
-          id="toggle-btn"
         />
       </a>
       <ul id="navbar-menu">
