--- a/templates/travel.html
+++ b/templates/travel.html
@@ -1,4 +1,4 @@
-{% extends "nav.html" %} {% block content %}
+{% extends "nav.html" %} {% block content %} {% load static %}
 <div class="news-container">
   <style>
     body {
