--- a/templates/option.html
+++ b/templates/option.html
@@ -1,5 +1,4 @@
-{% extends "nav.html" %} {% block content %}
-{% load static %}
+{% extends "nav.html" %} {% load static %} {% block content %}
 <div class="news-container">
   <style>
     body {
