--- a/templates/nav.html
+++ b/templates/nav.html
@@ -135,9 +135,9 @@
         />
       </a>
       <ul id="navbar-menu">
-        <li><a href="http://127.0.0.1:8000/">Home</a></li>
-        <li><a href="http://127.0.0.1:8000/travel/">แนะนำวัดในจังหวัดศรีสะเกษ</a></li>
-        <li><a href="http://127.0.0.1:8000/option/">เลือกสถานที่เที่ยว</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="travel">แนะนำวัดในจังหวัดศรีสะเกษ</a></li>
+        <li><a href="option">เลือกสถานที่เที่ยว</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
