--- a/templates/nav.html
+++ b/templates/nav.html
@@ -135,9 +135,9 @@
         />
       </a>
       <ul id="navbar-menu">
-        <li><a href="">Home</a></li>
-        <li><a href="travel">แนะนำวัดในจังหวัดศรีสะเกษ</a></li>
-        <li><a href="option">เลือกสถานที่เที่ยว</a></li>
+        <li><a href="https://travel-app-delta-three.vercel.app/">Home</a></li>
+        <li><a href="https://travel-app-delta-three.vercel.app/travel">แนะนำวัดในจังหวัดศรีสะเกษ</a></li>
+        <li><a href="https://travel-app-delta-three.vercel.app/option">เลือกสถานที่เที่ยว</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
