--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar คล้าย Apple</title>
+    <title>Tarvel in Sikaket</title>
     <style>
        body {
         margin: 0;
