--- a/templates/option.html
+++ b/templates/option.html
@@ -405,7 +405,7 @@
               style="border: 2px solid #000; padding: 10px; border-radius: 5px"
             >
               <img
-                src="http://www.prasatyoe.go.th/wp-content/uploads/2024/06/1-18.jpg"
+                src="https://cms.dmpcdn.com/travel/2023/09/12/e856ea30-5114-11ee-a3db-71c4f741bb87_webp_original.webp"
                 alt="Project 1"
                 style="width: 100%; border-radius: 5px"
               />
