--- a/templates/nav.html
+++ b/templates/nav.html
@@ -148,7 +148,7 @@
       </ul>
       <div class="navbar-right">
         <div class="profile">
-          <img src="{% static 'images/profile.png' %}" alt="Profile" class="icon" />
+          <img src="static/images/profile.png" alt="Profile" class="icon" />
         </div>
     </nav>
 
