--- a/templates/home.html
+++ b/templates/home.html
@@ -22,11 +22,20 @@
         margin: 0 auto;
         padding: 20px;
       }
-      .title {
-        text-align: center;
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 230px;
+      body {
+     display: flex;
+     justify-content: center; /* จัดกึ่งกลางในแนวนอน */
+     align-items: center; /* จัดกึ่งกลางในแนวตั้ง */
+     height: 100vh; /* ความสูงของหน้าจอ */
+     margin: 0; /* ลบ margin ของ body */
+}
+          .title {
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      position: relative;
+      top: 50%; /* เลื่อนลงมาครึ่งหนึ่งของความสูง */
+      transform: translateY(-50%); /* ย้ายกลับขึ้นมาให้กึ่งกลาง */
       }
       .products {
         display: flex;
